--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="display"></div>
-    <!-- Javascript -->
+    <h1>Memory</h1>
+    <h2>Memorizza i numeri sottostanti</h2>
+    <div class="container">
+        <div class="display"></div>
+    </div>
+        <!-- Javascript -->
     <script src="./js/script.js"></script>
 </body>
 </html>
